--- a/.github/workflows/docker-upload.yaml
+++ b/.github/workflows/docker-upload.yaml
@@ -1,27 +1,31 @@
 name: Docker Image CI
 
-on :
-    push:
-      branches: ["main"]
+on:
+  push:
+    branches: ["main"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
+    steps:
+      - name: Checkout
         uses: actions/checkout@v3
-        - name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
-        - name: Set up Docker Buildx
-        uses: docker/setup-buiildx-action@v2
-        - name: Build and Push to Docker Hub
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and Push to Docker Hub
+        uses: docker/build-push-action@v2
         with:
-          image: ${{ secrets.DOCKERHUB_USERNAME}}/data-analyser-microservice}}
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/data-analyser-microservice
           tags: 0.0.$GITHUB_RUN_NUMBER, latest
           dockerfile: Dockerfile
           registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
-
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
